--- a/style.scss
+++ b/style.scss
@@ -25,3 +25,24 @@
     }
   }
 }
+
+.header__search {
+  width: $width;
+  height: 115px;
+  margin: 0 auto;
+  display: $flex;
+  .header__searchcategory {
+    background-image: url(https://static.coupangcdn.com/image/coupang/common/pc_header_img_sprite_180104.png);
+    background-position-x: 0px;
+    background-position-y: 0px;
+    width: 110px;
+    height: 115px;
+    margin: 0px 30px 0px 0px;
+    padding: 0 0 0 0;
+    text-align: center;
+    span {
+      color: #fff;
+      margin-top: 30px;
+    }
+  }
+}
