[design] : css 검색창 아래 서브 메뉴 배치

--- a/style.scss
+++ b/style.scss
@@ -116,3 +116,11 @@
     bottom: -2px;
   }
 }
+
+.header__submenu ul {
+  width: 730px;
+  display: $flex;
+  justify-content: space-between;
+  font-size: 13px;
+  margin-top: 10px;
+}
