--- a/style.css
+++ b/style.css
@@ -114,4 +114,12 @@
   bottom: -2px;
 }
 
+.header__submenu ul {
+  width: 730px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 13px;
+  margin-top: 10px;
+}
+
 /*# sourceMappingURL=style.css.map */
