--- a/style.css
+++ b/style.css
@@ -161,4 +161,20 @@
   text-align: left;
 }
 
+.main__banner {
+  width: 100%;
+  height: 450px;
+  margin: 0 auto;
+  background-image: url("https://image8.coupangcdn.com/image/ccm/banner/9fb9b02bd7aa5868792da3b3a8808d7a.png");
+}
+.main__banner div {
+  width: 1020px;
+  height: 450px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 12px;
+}
+
 /*# sourceMappingURL=style.css.map */
