[refactor] : 자주쓰이는 css 내용 묶어서 함수처럼 사용

--- a/style.scss
+++ b/style.scss
@@ -119,8 +119,7 @@
 
 .header__submenu ul {
   width: 730px;
-  display: $flex;
-  justify-content: space-between;
+  @include display();
   font-size: 13px;
   margin-top: 10px;
 }
