--- a/public/stylesheet/css/style.css
+++ b/public/stylesheet/css/style.css
@@ -135,6 +135,10 @@ table {
   border-spacing: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 .top-bar__background {
   background-color: #f0f0f0;
 }
@@ -142,7 +146,11 @@ table {
 .top-bar__container {
   width: 1000px;
   height: 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,8 +174,281 @@ table {
 }
 
 .top-bar__col a {
-  text-decoration: none;
   color: #1f1f1f;
+}
+
+.header {
+  width: 1000px;
+  height: 115px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
+}
+
+.header__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.category-btn {
+  background-image: url(//static.coupangcdn.com/image/coupang/common/pc_header_img_sprite_180104.png);
+  background-repeat: no-repeat;
+  width: 110px;
+  height: 115px;
+  background-position: 0 0;
+  text-align: center;
+}
+
+.category-btn > a {
+  display: block;
+  margin-top: 73px;
+  color: #fff;
+  font-size: 13px;
+}
+
+.header__icon--right {
+  padding-bottom: 20px;
+}
+
+.header__icon--right > span {
+  font-size: 12px;
+  color: #1f1f1f;
+}
+
+.header__icon--right:first-child {
+  padding-top: 10px;
+}
+
+.header__icon--right:nth-child(2) {
+  position: relative;
+  margin-left: 20px;
+}
+
+.header-cart-cnt {
+  position: absolute;
+  top: 4px;
+  left: 25px;
+  font-size: 11px;
+  color: #fff;
+}
+
+.my-coupang-icon {
+  width: 29px;
+  height: 31px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 3px;
+  background-position: -112px -42px;
+  background-image: url(//static.coupangcdn.com/image/coupang/common/pc_header_img_sprite_180104.png);
+  background-repeat: no-repeat;
+}
+
+.cart-icon {
+  width: 40px;
+  height: 41px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 3px;
+  background-position: -112px 0;
+  background-image: url(//static.coupangcdn.com/image/coupang/common/pc_header_img_sprite_180104.png);
+  background-repeat: no-repeat;
+}
+
+.header-main-container {
+  width: 73%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__gnb {
+  margin-bottom: 5px;
+}
+
+.header-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 25px;
+}
+
+.coupang-logo {
+  width: 174px;
+  height: 41px;
+}
+
+.gnb-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.gnb-menu a {
+  font-size: 12px;
+  color: #1f1f1f;
+}
+
+.gnb-menu > li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 25px;
+}
+
+.rocket-delivery {
+  background-image: url(//static.coupangcdn.com/image/coupang/common/pc_header_img_sprite_180104.png);
+  background-repeat: no-repeat;
+  background-position: 0 -118px;
+  padding-left: 23px;
+}
+
+.rocket-fresh {
+  background-image: url(//static.coupangcdn.com/image/coupang/common/pc_header_rocket_fresh_1x.png);
+  background-repeat: no-repeat;
+  padding-left: 20px;
+}
+
+.new-badge {
+  display: inline-block;
+  overflow: hidden;
+  width: 12px;
+  height: 12px;
+  background: url(//static.coupangcdn.com/image/coupang/common/ico_new.png) no-repeat transparent;
+  background-size: 12px;
+}
+
+.header-main__search {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 3px solid #4284f3;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 35px;
+  margin-left: 25px;
+}
+
+.search__category {
+  width: 25%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-right: 1px solid #d1d1d1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0px 10px;
+  cursor: pointer;
+}
+
+.search__category span {
+  color: #555555;
+  font-size: 12px;
+}
+
+.search__category i {
+  color: #b2b2b2;
+}
+
+.search__input {
+  width: 74%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search__input input {
+  height: 90%;
+  border-style: none;
+  width: 100%;
+}
+
+.search__input input:focus {
+  outline: none;
+}
+
+.mic-icon {
+  overflow: hidden;
+  width: 26px;
+  height: 26px;
+  background: url(//img1a.coupangcdn.com/image/coupang/common/ic_mic.png) 3px 1px no-repeat;
+  background-size: 20px 48px;
+  cursor: pointer;
+}
+
+.search-icon {
+  width: 50px;
+  height: 39px;
+  background-position: -112px -71px;
+  background-image: url(//static.coupangcdn.com/image/coupang/common/pc_header_img_sprite_180104.png);
+  background-repeat: no-repeat;
+  cursor: pointer;
+  margin-top: 3px;
+}
+
+.search__category-list {
+  position: absolute;
+  background-color: #fff;
+  width: 130px;
+  max-height: 500px;
+  border-style: sha;
+  top: 35px;
+  overflow: hidden;
+  -webkit-box-shadow: 1px 1px 4px gray;
+          box-shadow: 1px 1px 4px gray;
+  overflow-y: scroll;
+  -webkit-transition: max-height 0.2s ease-out;
+  transition: max-height 0.2s ease-out;
+}
+
+.hidden {
+  max-height: 0 !important;
+}
+
+.category__items li {
+  font-size: 12px;
+  padding: 10px;
+}
+
+.category__item a {
+  color: inherit;
 }
 
 body {
