--- a/public/stylesheet/scss/_top-bar.scss
+++ b/public/stylesheet/scss/_top-bar.scss
@@ -5,7 +5,10 @@
 .top-bar__container {
   width: 1000px;
   height: 30px;
+  box-sizing: border-box;
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,7 +22,6 @@
   }
 
   a {
-    text-decoration: none;
     color: #1f1f1f;
   }
 }
