--- a/public/stylesheet/scss/style.scss
+++ b/public/stylesheet/scss/style.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 @import "./reset";
 @import "./top-bar";
+@import "./top-ad";
 @import "./header";
 
 body {
